Revision 270: (2013/01/01 Armin Biernaczyk)
- ovcstate.pas
  Bugfix: Calling TOvcFormState.ReadFormState made the window disappear when called
  for a visible form.
- ovctchdr.pas
  Bugfix: The components TOvcTCColHead and TOvcTCRowHead displayed garbage when
  'UseASCIIZStrings' was set to False.

Revision 269: (2012/10/05 Armin Biernaczyk)
Added support for Delphi XE3

Revision 268: (2012/09/30 Armin Biernaczyk)
- ovctgres.pas
  Minor bugfix: The property TOvcTCCheckBox.CellGlyphs.IsDefault could not be set to true.

Revision 267: (2012/03/18 Armin Biernaczyk)
- Tests added to OrpheusTests
- Minor changes regarding the bugfixes in rev 266

Revision 266: (2012/03/17 Armin Biernaczyk)
- ovcef.pas
  Workaround in TOvcBaseEntryField.efRangeToStRange for a bug in system.str in Delphi XE2
- ovcsf.pas
  Minor bugfix in TOvcCustomSimpleField.efTransfer.

Revision 265: (2012/01/04 Armin Biernaczyk)
- ovcvlb.pas
  Bugfix for an issue in the function 'ScrollCanvas' that led to display problems in
  TOvcVirtualListBox and TOvcReportView when using the mousewheel.

Revision 264: (2011/12/18 Armin Biernaczyk)
- ovcedit.pas
  New property 'ShowWrapColumn' to display a vertical line at a certain column in
  TOvcEditor (similar to the Delphi IDE).
- ovctcbox.pas
  Fix for an issue when using TOvcTCCheckBox in a TOvcTable when user defined styles
  are used in Delphi XE2.

Revision 257: (2011/09/22 Armin Biernaczyk)
- ovctable.pas
  Change in TOvcCustomTable.DoGetCellData to detect invalid pointers in GetCellData-
  event at runtime.

Revision 250: (2011/09/07 Armin Biernaczyk)
- ovcstr.pas
  Code for OvcStr.StrChPos changed to resolve issue 3405788.

Revision 242/243: (2011/09/01 Armin Biernaczyk)
- ovc.inc
  New Symbol 'VERSIONXE2' for Delphi XE2 (aka Pulsar)
- ovccklb.pas, ovcclrcb.pas, ovccmbx.pas, ovcnbk.pas, ovctccheckbbx.pas,
  OvcThemes.pas,
  Code modified to use 'StyleServices' instead of 'ThemeServices' in Delphi XE2;
  'ThemeServices' is deprecated in Delphi XE2.