@@ -120,6 +120,7 @@
 			<DCCReference Include="O408_r.dcp"/>
 			<DCCReference Include="O408br.dcp"/>
 			<DCCReference Include="designide.dcp"/>
+			<DCCReference Include="bdertl.dcp"/>
 			<DCCReference Include="..\..\source\ovcdbae0.pas">
 				<Form>OvcfrmDbAeRange</Form>
 			</DCCReference>
@@ -141,6 +142,14 @@
 			</DCCReference>
 			<DCCReference Include="..\..\source\ovcregbd.pas"/>
 			<DCCReference Include="..\..\source\ovcregdb.pas"/>
+			<DCCReference Include="..\..\source\ovcdbhll.pas"/>
+			<DCCReference Include="..\..\source\ovcdbise.pas"/>
+			<DCCReference Include="..\..\source\OvcDbIdx.pas"/>
+			<DCCReference Include="..\..\source\ovcdbadg.pas">
+				<Form>OvcfrmAliasDlg</Form>
+			</DCCReference>
+			<DCCReference Include="..\..\source\ovcdbacb.pas"/>
+			<DCCReference Include="..\..\source\ovcdbtcb.pas"/>
 			<BuildConfiguration Include="Debug">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
